# ccxt-wrapper

./: Dockerfile  Makefile  README.md  app.py  binance.py  config.py  conftest.py  deply.sh  docker-compose.yml  email_services.py  error_message.py  exchange.py  exchange_utils.py  exchanges_ccxt_config.json  gateio.py  kraken.py  order_services.py  ordertypevalue.py  parameters.py  pyproject.toml  pytest.ini  requirements.txt  set_log_levels.py  test_binance_live.py  test_bitfinex_live.py  test_exchange.py  test_gateio_live.py  test_okx_live.py  watch_orders.py
.github/: FUNDING.yml
.github/workflows/: build-publish.yml  code-check.yml  pylint.yml  python-app.yml
clients/: bitfinex.py  bybit.py  custom_types.py  exchange.py  exchange_utils.py  okx.py
database/: models.py
enums/: __init__.py
loggers/: __init__.py  set_log_levels.py
tests/: test_binance_live.py  test_binance_sandbox.py  test_bitfinex_live.py  test_bybit_live.py  test_gateio_live.py  test_kraken_live.py  test_okx_live.py
